--- a/paisesApp/src/app/paises/components/pais-tabla/pais-tabla.component.html
+++ b/paisesApp/src/app/paises/components/pais-tabla/pais-tabla.component.html
@@ -9,7 +9,7 @@
         </tr>
     </thead>
     <tbody>
-        <tr *ngFor="let item of paises; index as i">
+        <tr *ngFor="let item of paises; index as i" class="animate__animated animate__fadeIn animate__faster">
             <td>
                 {{i+1}}
             </td>
