--- a/paisesApp/src/app/paises/pages/por-region/por-region.component.html
+++ b/paisesApp/src/app/paises/pages/por-region/por-region.component.html
@@ -1,1 +1,31 @@
-<p>por-region works!</p>
+<div class="animate__animated animate__fadeIn animate__faster">
+    <h3>
+        Buscar por region
+        <small>
+            {{regionActiva | titlecase}}
+        </small>
+    </h3>
+    <hr>
+
+    <h5>
+        Seleccione la region
+    </h5>
+
+    <div class="row">
+        <div class="col">
+            <!-- [class.btn-primary]="item===regionActiva" -->
+
+            <!-- [ngClass] si se cumple la condicion arroja esta clase -->
+            <!-- [ngClass]="{
+                'btn-primary':item===regionActiva, 
+                'btn btn-outline-primary':item===regionActiva
+            }" -->
+
+
+            <button *ngFor="let item of regiones" [class]="getClaseCSS(item)" (click)="activarRegion(item)">
+                {{item |titlecase}}
+            </button>
+        </div>
+        <app-pais-tabla [paises]="paises" *ngIf="paises.length >0"></app-pais-tabla>
+    </div>
+</div>
